[package]
name = "renderer"
version = "0.1.0"
authors = ["Nick Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl_renderer={path="renderer"}
ecs={path="ecs"}
nalgebra = "0.21.1"
rand="0.7.3"
