[package]
name = "gl_renderer"
version = "0.1.0"
authors = ["Nick Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.24.1"
winit = "0.20.0"
takeable-option = "0.4"
image = "0.21"
nalgebra = "0.21.1"

[build-dependencies]
gl_generator = "0.13"
